修改模板设置

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,15 +27,18 @@
             <div class="footer">
               <div class="contact">
                 <p>
-                  Your Name<br />
-                  What You Are<br />
-                  your@email.com
+                  QQ:<br/>
+                  WeiBo:<br />
+                  Zero's GitHub:<br />
+                  email:
                 </p>
               </div>
               <div class="contact">
                 <p>
-                  <a href="http://github.com/yourusername/">github.com/yourusername</a><br />
-                  <a href="http://twitter.com/yourusername/">twitter.com/yourusername</a><br />
+                  279301979<br/>
+                  <a href="http://weibo.com/nb2008">zeronbo</a><br />
+                  <a href="http://github.com/zeronbo">github.com/zeronbo</a><br />
+                  <a href="http://mail.163.com/">zeronbo@163.com</a>,<a href="https://mail.google.com/">zeronbo@gmail.com</a><br />
                 </p>
               </div>
             </div>
