修改default模板的显示

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,10 +27,10 @@
             <div class="footer">
               <div class="contact">
                 <p>
-                  QQ:<br/>
-                  WeiBo:<br />
-                  Zero's GitHub:<br />
-                  email:
+                  QQ：<br/>
+                  WeiBo：<br />
+                  Zero's GitHub：<br />
+                  email：
                 </p>
               </div>
               <div class="contact">
@@ -38,7 +38,7 @@
                   279301979<br/>
                   <a href="http://weibo.com/nb2008">zeronbo</a><br />
                   <a href="http://github.com/zeronbo">github.com/zeronbo</a><br />
-                  <a href="http://mail.163.com/">zeronbo@163.com</a>,<a href="https://mail.google.com/">zeronbo@gmail.com</a><br />
+                  <a href="http://mail.163.com/">zeronbo@163.com</a>，<a href="https://mail.google.com/">zeronbo@gmail.com</a><br />
                 </p>
               </div>
             </div>
